# STDL

./: CMakeLists.txt  LICENSE  README.md  example.stdl  out.stdl
examples/: main.cpp  out.stdl
include/: stdl.hpp
src/: parser.cpp  parser.hpp  scene.cpp  scene.hpp
